Ensure profile folder exists in workflow
Added a step to ensure the profile folder exists before generating the stats card.

--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Ensure the profile folder exists
+      - name: Ensure profile folder exists
+        run: mkdir -p profile
+
       - name: Generate stats card
         uses: readme-tools/github-readme-stats-action@v2
         with:
