--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -13,11 +13,7 @@ jobs:
 
       # Ensure the profile folder exists
       - name: Ensure profile folder exists
-        run: |
-          if [ -f profile ]; then
-            rm profile
-          fi
-          mkdir -p profile
+        run: mkdir -p profile
 
       - name: Generate stats card
         uses: readme-tools/github-readme-stats-action@v1
@@ -41,4 +37,4 @@ jobs:
           git config user.email "github-actions@users.noreply.github.com"
           git add profile/*.svg
           git commit -m "Update README cards" || exit 0
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
